--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,7 @@
-Flask==1.1.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
-scikit-learn==0.22.1
-matplotlib>=1.4.3
-pandas>=0.19
-flasgger==0.9.4
-streamlit
-
-
-
+matplotlib==3.7.1
+numpy==1.24.2
+pandas==1.5.3
+plotly==5.13.1
+pyarrow==11.0.0
+scikit-learn==1.2.2
+scipy==1.10.1
